# pymicromax

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  hello.py  mkdocs.yml  pyproject.toml
docs/: index.md
infra/docker/: compose.yml
microservices/backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  compose.override.yaml  compose.yml  pyproject.toml
microservices/backend/app/: main.py  utils.py
microservices/backend/app/alembic/: env.py
microservices/backend/app/alembic/versions/: 1a31ce608336_add_cascade_delete_relationships.py  9c0a54914c78_add_max_length_for_string_varchar_.py  d98dd8ec85a3_edit_replace_id_integers_in_all_models_.py
microservices/backend/app/api/routes/: items.py  login.py  private.py  users.py
microservices/backend/app/core/: config.py
microservices/backend/app/tests/: conftest.py
microservices/backend/app/tests/api/routes/: test_items.py  test_users.py
microservices/backend/app/tests/utils/: user.py
