[project]
name = "pymicromax"
authors = [{ name = "Ivan Prytula", email = "ivanprytula.dev@gmail.com" }]
version = "0.1.0"
description = "Project focused on mastering microservices with maximum potential for deployment and scalability."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
