[project]
name = "pymicromax"
authors = [{ name = "Ivan Prytula", email = "ivanprytula.dev@gmail.com" }]
version = "0.1.0"
description = "Project focused on mastering microservices with maximum potential for deployment and scalability."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
]

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

# add config for Ruff to sort imports
[tool.ruff]
line-length = 120 # default is 88

[tool.ruff.lint]
extend-select = ["I",]
extend-safe-fixes = ["E402", ]

[tool.lint.per-file-ignores]
"__init__.py" = ["E402"]
"microservices/backend/app/alembic/versions/*" = ["F401"]

[tool.lint.isort]
force-sort-within-sections = true
