[project]
name = "backend"
version = "0.1.0"
authors = [{ name = "Ivan Prytula", email = "ivanprytula.dev@gmail.com" }]
description = "Core backend for public/private API. Managed by single/multiple developers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "bcrypt==4.0.1",
    "emails>=0.6,<1.0",
    "fastapi[standard]>=0.115.6",
    "highlight-io>=0.9.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.2.1,<3.0.0",
    "pydantic[email]>=2.10.3",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.7,<1.0.0",
    "sentry-sdk[fastapi]>=2.19.2",
    "sqlmodel>=0.0.22,<1.0.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "ipython>=8.30.0",
    "pytest>=8.3.4",
]
